--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
   <script>
     // === 修改这里：你的后端域名（VPS 经 Cloudflare Tunnel 暴露的 API）===
-    const API_BASE = 'https://api.example.com';
+    const API_BASE = 'https://mmx.multmatrix.com';
 
     const els = {
       videoUrl: document.getElementById('videoUrl'),
