--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <div class="notice">
       <b>配置提示：</b>
-      先把 <code>API_BASE</code> 改成你的后端地址（例如 <code>https://api.example.com</code>）。
+      先把 <code>API_BASE</code> 改成你的后端地址（例如 <code>https://mmx.multmatrix.com</code>）。
     </div>
 
     <div class="card">
